Changed API a bit, updated API docs
